fix: ensure all main containers are fully responsive on mobile

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -305,6 +305,13 @@ div.toggle_full {
 
     div.inset {
         width: auto;
+        max-width: 100%;
+        padding: 0 20px;
+    }
+
+    div.small_inset {
+        width: auto;
+        max-width: 100%;
         padding: 0 20px;
     }
 
@@ -323,6 +330,7 @@ div.toggle_full {
     
     div.wide_inset {
         width: auto;
+        max-width: 100%;
         padding: 0 20px;
     }
 }
